UI Fix: Fix the alignment for "intro-text" in both RTL and LTR directions.

--- a/static/css/sass/pages/_blog.scss
+++ b/static/css/sass/pages/_blog.scss
@@ -52,14 +52,9 @@
 }
 
 .intro-block {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    
     .intro-text {
         color: v.$fg-dim;
         font-size: 1rem;
-        max-width: 60%;
     }
 }
 
